Se terminó pagina de contacto, faltan algunos ajustes y se corrigieron algunos errores de codigo

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="css/normalize.css">
     <!-- CSS -->
     <link rel="stylesheet" href="css/estilo.css">
-
+    
 </head>
 
 <body>
@@ -31,13 +31,13 @@
                     </button>
                 </div>
 
-                <a class="navbar-brand" href="../index.html">
-                    <img class="logo" src="../imagenes/logo.png" alt="Logo Pizza Fan">
+                <a class="navbar-brand" href="index.html">
+                    <img class="logo img-fluid" src="imagenes/logo.png" alt="Logo Pizza Fan">
                 </a>
 
                 <div class="flex-row justify-content-evenly collapse navbar-collapse" id="navbarNavAltMarkup">
                     <ul class="navbar-nav">
-                        <li><a href="../index.html">INICIO</a><span class="d-none d-lg-inline">|</span></li>
+                        <li><a href="index.html">INICIO</a><span class="d-none d-lg-inline">|</span></li>
                         <li><a href="pages/masa.html">MASA</a><span class="d-none d-lg-inline">|</span></li>
                         <li><a href="pages/recetas.html">RECETAS</a><span class="d-none d-lg-inline">|</span></li>
                         <li><a href="pages/calculadora.html">CALCULADORA</a><span class="d-none d-lg-inline">|</span></li>
