--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -53,13 +53,13 @@
         <h1 class="container text-center">LA RECETA PERFECTA PARA TU PIZZA NAPOLITANA</h1>
     </main>
 
-        <section>
+        <section class="container mb-2">
 
-            <h2>CONTACTO</h2>
+            <h2 class="container text-center subtituloSeccion pt-2 pb-2">CONTACTO</h2>
 
-            <div class="contactoContenedor">
+            <div class="row mt-2 p-0 m-0 container-fluid">
 
-                <div>
+                <div class="col-lg-6 col-sm-12 pt-2 ps-2 m-0 bg-secondary-subtle">
                     <h3>¡QUEREMOS MEJORAR!</h3>
                     <p>Si te gustó nuestra web, tenés alguna duda o simplemente querés enviarnos un “GRACIAS!” te dejamos a continuación nuestro formulario de contacto. </p>
 
@@ -77,8 +77,8 @@
 
                 </div>
 
-                <div>
-                    <img src="../imagenes/contacto/contacto-napolitano.jpg" alt="Horno a leña con dos pizzas saliendo">
+                <div class="col-lg-6 col-sm-12 m-0 p-0 d-flex align-items-stretch">
+                    <img class="img-fluid object-fit-cover" src="../imagenes/contacto/contacto-napolitano.jpg" alt="Horno a leña con dos pizzas saliendo">
 
                 </div>
 
