--- a/pages/masa.html
+++ b/pages/masa.html
@@ -55,8 +55,8 @@
     </main>
 
     <section class="container mb-2">
-
-        <div class="row mt-2 p-0 m-0 container-fluid">
+               
+       <div class="row mt-2 p-0 m-0 container-fluid d-flex align-items-stretch">
 
             <div class="col-lg-6 col-sm-12 pt-2 m-0 pe-0 bg-secondary-subtle">
                 <h3>Masa</h3>
@@ -65,10 +65,10 @@
                         class="pNegrita">CLAVE</span> para que la masa salga perfecta.</p>
             </div>
 
-            <div class="col-lg-6 col-sm-12 m-0 p-0 container-fluid">
-                <img class="img-fluid" src="../imagenes/masa/masa-1.jpg" alt="Mano amasando y estirando pizza">
+            <div class="col-lg-6 col-sm-12 m-0 p-0 container-fluid d-flex align-items-stretch">
+                <img class="img-fluid object-fit-cover" src="../imagenes/masa/masa-1.jpg" alt="Mano amasando y estirando pizza">
             </div>
-        </div>
+        </div> 
 
         <div class="row container-fluid m-0 p-0">
 
