Se corrigieron errores y se agrego nueva portada, lo unico que hay un conflicto entre la animación y el position abosolute. Se sigue buscando solucion mañana

--- a/pages/recetas.html
+++ b/pages/recetas.html
@@ -18,11 +18,11 @@
 
 <body>
     <header>
-
+        <!-- BARRA DE NAVEGACION -->
         <nav class="container-fluid navbar navbar-expand-lg">
             <div class="container-fluid flex-row justify-content-around">
-                <div class="d-flex flex-column text-center">   
-
+                <div class="d-flex flex-column text-center">
+<!-- MENU HAMBURGESA MOBILE -->
                     <label class="fuenteMenuIconoMobile navbar-toggler ps-2">MENÚ</label>
                     <button class="iconoMenuMobile navbar-toggler px-3" type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
@@ -49,7 +49,7 @@
         </nav>
 
     </header>
-
+<!-- SECCION RECETAS -->
     <main>
         <h1 class="container text-center">LA RECETA PERFECTA PARA TU PIZZA NAPOLITANA</h1>
     </main>
@@ -96,11 +96,14 @@
                 <h4>INGREDIENTES</h4>
 
                 <ul class="listaIngredientes mb-2">
-                    <li><img class="pe-2" src="../imagenes/masa/bxs-pizza.svg" alt="icono de pizza">1 LATA DE TOMATE PERITA</li>
-                    <li><img class="pe-2" src="../imagenes/masa/bxs-pizza.svg" alt="icono de pizza">CHORRITO DE ACEITE DE OLIVA
+                    <li><img class="pe-2" src="../imagenes/masa/bxs-pizza.svg" alt="icono de pizza">1 LATA DE TOMATE
+                        PERITA</li>
+                    <li><img class="pe-2" src="../imagenes/masa/bxs-pizza.svg" alt="icono de pizza">CHORRITO DE ACEITE
+                        DE OLIVA
                     </li>
                     <li><img class="pe-2" src="../imagenes/masa/bxs-pizza.svg" alt="icono de pizza">5 gr SAL</li>
-                    <li><img class="pe-2" src="../imagenes/masa/bxs-pizza.svg" alt="icono de pizza">3 HOJAS DE ALBAHACA</li>
+                    <li><img class="pe-2" src="../imagenes/masa/bxs-pizza.svg" alt="icono de pizza">3 HOJAS DE ALBAHACA
+                    </li>
                 </ul>
 
                 <p>A continuación vamos a enseñarte como realizar la salsa tradicional italiana para el estilo
@@ -118,64 +121,69 @@
 
 
             <div class="col-lg-6 col-sm-12 m-0 p-0 d-flex align-items-stretch">
-                <img class="img-fluid object-fit-cover" src="../imagenes/recetas/salsa-pizza.webp" alt="Pizza vista desde arriba con salsa">
+                <img class="img-fluid object-fit-cover" src="../imagenes/recetas/salsa-pizza.webp"
+                    alt="Pizza vista desde arriba con salsa">
 
             </div>
 
-        
 
-        <div class="row mt-2 p-0 m-0 container-fluid">
 
-            <div class="col-lg-6 col-sm-12 pt-2 ps-2 m-0 bg-secondary-subtle">
-                <h3>PIZZA MARGARITA</h3>
-                <h4>INGREDIENTES</h4>
+            <div class="row mt-2 p-0 m-0 container-fluid">
 
-                <ul class="listaIngredientes mb-2">
-                    <li><img class="pe-2" src="../imagenes/masa/bxs-pizza.svg" alt="icono pizza">150 gr QUESO MOZZARELLA</li>
-                    <li><img class="pe-2" src="../imagenes/masa/bxs-pizza.svg" alt="icono pizza">100 gr SALSA</li>
-                    <li><img class="pe-2" src="../imagenes/masa/bxs-pizza.svg" alt="icono pizza">20 gr QUESO PARMESANO RALLADO.
-                    </li>
-                    <li><img class="pe-2" src="../imagenes/masa/bxs-pizza.svg" alt="icono pizza">5 HOJAS DE ALBAHACA</li>
-                </ul>
+                <div class="col-lg-6 col-sm-12 pt-2 ps-2 m-0 bg-secondary-subtle">
+                    <h3>PIZZA MARGARITA</h3>
+                    <h4>INGREDIENTES</h4>
 
-                <p>Esta es la receta CLÁSICA de Italia. La pizza más famosa del país. Su simpleza y sabor cautiva al
-                    mundo.</p>
+                    <ul class="listaIngredientes mb-2">
+                        <li><img class="pe-2" src="../imagenes/masa/bxs-pizza.svg" alt="icono pizza">150 gr QUESO
+                            MOZZARELLA</li>
+                        <li><img class="pe-2" src="../imagenes/masa/bxs-pizza.svg" alt="icono pizza">100 gr SALSA</li>
+                        <li><img class="pe-2" src="../imagenes/masa/bxs-pizza.svg" alt="icono pizza">20 gr QUESO
+                            PARMESANO RALLADO.
+                        </li>
+                        <li><img class="pe-2" src="../imagenes/masa/bxs-pizza.svg" alt="icono pizza">5 HOJAS DE ALBAHACA
+                        </li>
+                    </ul>
 
-                <h4>PROCEDIMIENTO</h4>
+                    <p>Esta es la receta CLÁSICA de Italia. La pizza más famosa del país. Su simpleza y sabor cautiva al
+                        mundo.</p>
 
-                <ol>
-                    <li>Colocamos una base de salsa.</li>
-                    <li>Espolvoreamos queso parmesano.</li>
-                    <li>Distribuimos nuestro queso mozzarella.</li>
-                    <li>Horneamos a 400 grados (ideal con horno leña).</li>
-                    <li>Decoramos con Hojas de Albahaca y Aceite de Oliva.</li>
-                </ol>
+                    <h4>PROCEDIMIENTO</h4>
 
-                <h4>TIP PARA HORNO COMÚN:</h4>
+                    <ol>
+                        <li>Colocamos una base de salsa.</li>
+                        <li>Espolvoreamos queso parmesano.</li>
+                        <li>Distribuimos nuestro queso mozzarella.</li>
+                        <li>Horneamos a 400 grados (ideal con horno leña).</li>
+                        <li>Decoramos con Hojas de Albahaca y Aceite de Oliva.</li>
+                    </ol>
 
-                <p>Para horno común se recomienda usar una placa de horno y poner primero SOLAMENTE la masa y la
-                    salsa. Luego que comienza a burbujear la salsa quiere decir que nuestra masa está casi lista.
-                </p>
+                    <h4>TIP PARA HORNO COMÚN:</h4>
 
-                <p>En ese momento la retiramos, agregamos el queso y dejamos que siga unos minutos más hasta que
-                el queso se derrita.</p>
+                    <p>Para horno común se recomienda usar una placa de horno y poner primero SOLAMENTE la masa y la
+                        salsa. Luego que comienza a burbujear la salsa quiere decir que nuestra masa está casi lista.
+                    </p>
 
-                <p>También podemos pintar los bordes de nuestra masa con aceite de oliva para que queden más dorados
-                </p>
+                    <p>En ese momento la retiramos, agregamos el queso y dejamos que siga unos minutos más hasta que
+                        el queso se derrita.</p>
+
+                    <p>También podemos pintar los bordes de nuestra masa con aceite de oliva para que queden más dorados
+                    </p>
+
+                </div>
+
+                <div class="col-lg-6 col-sm-12 m-0 p-0 d-flex align-items-stretch">
+                    <img class="img-fluid object-fit-cover" src="../imagenes/recetas/pizza-margarita-1.jpg"
+                        alt="Pizza Margarita">
+                </div>
+
 
             </div>
-
-            <div class="col-lg-6 col-sm-12 m-0 p-0 d-flex align-items-stretch">
-                <img class="img-fluid object-fit-cover" src="../imagenes/recetas/pizza-margarita-1.jpg" alt="Pizza Margarita">
-            </div>
-
-
-        </div>
 
 
     </section>
 
-
+<!-- FOOTER -->
     <footer class="d-flex flex-column">
 
         <div class="contenedorSeguinos container-fluid pb-3 pt-2 d-flex flex-column justify-content-center">
@@ -183,8 +191,9 @@
             <p class="seguinos text-center mb-2">¡SEGUINOS!</p>
 
             <div class="text-center">
-                <a class="redes" target="_blank" href="https://api.whatsapp.com/send?phone=+5493515921209&text=Hola,%20v%C3%AD%20tu%20pagina%20de%20Pizza%20Fan!..."><img class="redSocial"
-                        src="../imagenes/bxl-whatsapp.svg" alt="boton whatsapp"></a>
+                <a class="redes" target="_blank"
+                    href="https://api.whatsapp.com/send?phone=+5493515921209&text=Hola,%20v%C3%AD%20tu%20pagina%20de%20Pizza%20Fan!..."><img
+                        class="redSocial" src="../imagenes/bxl-whatsapp.svg" alt="boton whatsapp"></a>
                 <a class="redes" target="_blank" href="https://www.instagram.com/"><img class="redSocial"
                         src="../imagenes/bxl-instagram.svg" alt="boton instagram"></a>
                 <a class="redes" target="_blank" href="https://www.facebook.com/"><img class="redSocial"
@@ -194,10 +203,10 @@
 
         </div>
 
-        <p class="derechos container-fluid p-2 text-center">PizzaFan.Ar 2023 - Todos los Derechos Reservados</p>
+        <p class="derechos container-fluid m-0 p-2 text-center">PizzaFan.Ar 2023 - Todos los Derechos Reservados</p>
 
     </footer>
-
+<!-- SCRIPT BOOTSTRAP -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
         crossorigin="anonymous"></script>
