--- a/pages/calculadora.html
+++ b/pages/calculadora.html
@@ -18,11 +18,11 @@
 
 <body>
     <header>
-
+        <!-- BARRA DE NAVEGACION -->
         <nav class="container-fluid navbar navbar-expand-lg">
             <div class="container-fluid flex-row justify-content-around">
                 <div class="d-flex flex-column text-center">
-
+                    <!-- MENU HAMBURGESA MOBILE -->
                     <label class="fuenteMenuIconoMobile navbar-toggler ps-2">MENÚ</label>
                     <button class="iconoMenuMobile navbar-toggler px-3" type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
@@ -53,7 +53,7 @@
     <main>
         <h1 class="container text-center">LA RECETA PERFECTA PARA TU PIZZA NAPOLITANA</h1>
     </main>
-
+<!-- SECCION CALCULADORA -->
     <section class="container mb-2">
 
         <h2 class="container text-center subtituloSeccion pt-2 pb-2">CALCULADORA DE MASA</h2>
@@ -96,7 +96,7 @@
 
     </section>
 
-
+<!-- FOOTER -->
     <footer class="d-flex flex-column">
 
         <div class="contenedorSeguinos container-fluid pb-3 pt-2 d-flex flex-column justify-content-center">
@@ -116,9 +116,10 @@
 
         </div>
 
-        <p class="derechos container-fluid p-2 text-center">PizzaFan.Ar 2023 - Todos los Derechos Reservados</p>
+        <p class="derechos container-fluid p-2 m-0 text-center">PizzaFan.Ar 2023 - Todos los Derechos Reservados</p>
 
     </footer>
+    <!-- SCRIPT BOOTSTRAP -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
         crossorigin="anonymous"></script>
