--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
     <!-- PORTADA PRINCIPAL -->
 
-    <main>
+    <!-- <main>
         <div class="text-center m-0 p-0">
             <h1 class="display-4 fw-bold tituloPrincipal">La Vera Pizza Napoletana</h1>
             <div class="col-lg-6 mx-auto">
@@ -65,17 +65,42 @@
                     seguí nuestra pasión por la pizza estilo napolitano.</p>
             </div>
             <div class="overflow-hidden" style="max-height: 40vh;">
-                <div style="position: relative;"> 
-                  <img src="imagenes/foto-portada.jpg" class="img-fluid rounded-top-4 shadow-lg"
-                    alt="foto pizza napolitana margarita" width="700" height="500" loading="lazy">
-                  <a class="botonComenzar" href="pages/masa.html">¡COMENZAR!</a>
+                <div class="contenedorFotoPortada">
+                    <img src="imagenes/foto-portada.jpg" class="img-fluid rounded-top-4 shadow-lg"
+                        alt="foto pizza napolitana margarita" width="700" height="500" loading="lazy">
+                    <a class="botonComenzar" href="pages/masa.html">¡COMENZAR!</a>
                 </div>
-              </div>
+            </div>
         </div>
+    </main> -->
+    <main>
+        <div class="text-center m-0 p-0">
+            <h1 class="display-4 fw-bold tituloPrincipal">La Vera Pizza Napoletana</h1>
+            <div class="col-lg-6 mx-auto">
+                <p class="lead mb-4">Comenzá a cocinar este plato que ya es patrimonio de la humanidad en tu casa y
+                    seguí nuestra pasión por la pizza estilo napolitano.</p>
+            </div>
+        <div class="contenedorCarrusel carousel slide" data-bs-ride="carousel">
+            <div class="carousel-inner mb-3">
+                <div class="carousel-item active">
+                    <img src="imagenes/foto-portada-1.jpg" class="img-fluid d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item">
+                    <img src="imagenes/foto-portada-2.jpg" class="img-fluid d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item">
+                    <img src="imagenes/foto-portada-3.jpg" class="img-fluid d-block w-100" alt="...">
+                </div>
+                <a class="botonComenzar" href="pages/masa.html">¡COMENZAR!</a>
+            </div>
+        </div>
+
     </main>
 
 
+
     <!-- FOOTER -->
+
     <footer class="d-flex flex-column mt-0 pt-0">
 
         <div class="contenedorSeguinos container-fluid pb-3 pt-2 d-flex flex-column justify-content-center">
