--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <header>
         <!-- BARRA DE NAVEGACION -->
         <nav class="container-fluid navbar navbar-expand-lg">
-            <div class="container-fluid flex-row justify-content-around">
+            <div class="container-fluid">
                 <div class="d-flex flex-column text-center">
                     <!-- MENU HAMBURGESA MOBILE -->
                     <label class="fuenteMenuIconoMobile navbar-toggler ps-2">MENÚ</label>
@@ -57,39 +57,27 @@
 
     <!-- PORTADA PRINCIPAL -->
 
-    <!-- <main>
-        <div class="text-center m-0 p-0">
-            <h1 class="display-4 fw-bold tituloPrincipal">La Vera Pizza Napoletana</h1>
-            <div class="col-lg-6 mx-auto">
-                <p class="lead mb-4">Comenzá a cocinar este plato que ya es patrimonio de la humanidad en tu casa y
-                    seguí nuestra pasión por la pizza estilo napolitano.</p>
-            </div>
-            <div class="overflow-hidden" style="max-height: 40vh;">
-                <div class="contenedorFotoPortada">
-                    <img src="imagenes/foto-portada.jpg" class="img-fluid rounded-top-4 shadow-lg"
-                        alt="foto pizza napolitana margarita" width="700" height="500" loading="lazy">
-                    <a class="botonComenzar" href="pages/masa.html">¡COMENZAR!</a>
-                </div>
-            </div>
-        </div>
-    </main> -->
     <main>
-        <div class="text-center m-0 p-0">
-            <h1 class="display-4 fw-bold tituloPrincipal">La Vera Pizza Napoletana</h1>
-            <div class="col-lg-6 mx-auto">
-                <p class="lead mb-4">Comenzá a cocinar este plato que ya es patrimonio de la humanidad en tu casa y
-                    seguí nuestra pasión por la pizza estilo napolitano.</p>
-            </div>
-        <div class="contenedorCarrusel carousel slide" data-bs-ride="carousel">
+        <div class="text-center mb-1 p-0">
+            <h1 class="tituloPrincipal">La Vera Pizza Napoletana</h1>
+            <h2 class="mt-2 mb-4 col-lg-6 mx-auto">Comenzá a cocinar este plato que ya es patrimonio de la humanidad en tu
+                casa y
+                seguí nuestra pasión por la pizza estilo napolitano.</h2>
+        </div>
+
+        <div class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner mb-3">
                 <div class="carousel-item active">
-                    <img src="imagenes/foto-portada-1.jpg" class="img-fluid d-block w-100" alt="...">
+                    <img src="imagenes/foto-portada-1.jpg" class="img-fluid d-block w-100"
+                        alt="imagen de pizza uno en el carrusel">
                 </div>
                 <div class="carousel-item">
-                    <img src="imagenes/foto-portada-2.jpg" class="img-fluid d-block w-100" alt="...">
+                    <img src="imagenes/foto-portada-2.jpg" class="img-fluid d-block w-100"
+                        alt="imagen de pizza dos en el carrusel">
                 </div>
                 <div class="carousel-item">
-                    <img src="imagenes/foto-portada-3.jpg" class="img-fluid d-block w-100" alt="...">
+                    <img src="imagenes/foto-portada-3.jpg" class="img-fluid d-block w-100"
+                        alt="imagen de pizza tres en el carrusel">
                 </div>
                 <a class="botonComenzar" href="pages/masa.html">¡COMENZAR!</a>
             </div>
