Se comprimio imagenes y se optimitzo titulos y metadescription para optimizar a SEO

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="¡Bienvenido a Pizza Fan! Descubre el auténtico arte de la pizza estilo napolitano con nuestras recetas tradicionales y deliciosas. Aprende a crear tu propia pizza perfecta en casa con ingredientes de origen y técnicas auténticas. ¡Sumérgete en el mundo de la pizza con Pizza Fan y despierta tu pasión culinaria!">
     <title>Pizza Fan! - La Receta Perfecta para tu Pizza Napolitana</title>
     <link rel="shortcut icon" href="imagenes/favicon.png" type="image/x-icon">
     <!-- BOOTSTRAP -->
@@ -20,7 +21,7 @@
     <header>
         <!-- BARRA DE NAVEGACION -->
         <nav class="container-fluid navbar navbar-expand-lg">
-            <div class="container-fluid">
+            <div class="container-fluid d-flex justify-content-evenly">
                 <div class="d-flex flex-column text-center">
                     <!-- MENU HAMBURGESA MOBILE -->
                     <label class="fuenteMenuIconoMobile navbar-toggler ps-2">MENÚ</label>
