--- a/pages/calculadora.html
+++ b/pages/calculadora.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pizza Fan! - La Receta Perfecta para tu Pizza Napolitana - Calculadora</title>
+    <meta name="description" content="Utiliza la calculadora de masa de Pizza Fan para simplificar tus cálculos al preparar tu pizza napolitana. Ingresa la cantidad de pizzas que deseas cocinar y el peso de los bollos que necesitas, y obtén automáticamente las cantidades de harina, agua y poolish requeridas. Ahorra tiempo y asegúrate de tener los ingredientes adecuados para tu próxima creación culinaria.">
+    <title>Calculadora de Masa de Pizza - Cantidad de Ingredientes para tus Pizzas | Pizza Fan</title>
     <link rel="shortcut icon" href="../imagenes/favicon.png" type="image/x-icon">
     <!-- BOOTSTRAP -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
