--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pizza Fan! - La Receta Perfecta para tu Pizza Napolitana - Contacto</title>
+    <meta name="description" content="Contacta con Pizza Fan para tus comentarios, preguntas y sugerencias. Queremos mejorar y apreciamos tu opinión. Si te encantó nuestra web, tienes consultas o simplemente deseas enviarnos un agradecimiento, utiliza nuestro formulario de contacto. Estamos aquí para ayudarte a llevar el arte de la pizza napolitana a tu hogar. ¡Esperamos saber de ti!">
+    <title>Contacto - Contáctanos para Comentarios, Consultas y Sugerencias | Pizza Fan</title>
     <link rel="shortcut icon" href="../imagenes/favicon.png" type="image/x-icon">
     <!-- BOOTSTRAP -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
