--- a/pages/masa.html
+++ b/pages/masa.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pizza Fan! - La Receta Perfecta para tu Pizza Napolitana - Masa</title>
+    <meta name="description" content="Descubre el arte de la masa perfecta para pizza napolitana en Pizza Fan. Aprende técnicas esenciales, desde el fermento poolish hasta el amasado francés. Conoce los ingredientes clave, como la harina de fuerza, la levadura seca y la miel. Sigue nuestras detalladas instrucciones paso a paso para lograr masas suaves y aireadas. ¡Conviértete en un maestro pizzero y crea pizzas auténticas en casa!">
+    <title>Masa de Pizza Napolitana - Ingredientes y Procedimiento | Pizza Fan</title>
     <link rel="shortcut icon" href="../imagenes/favicon.png" type="image/x-icon">
     <!-- BOOTSTRAP -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -119,7 +120,7 @@
                 </ol>
             </div>
             <div class="col-lg-6 col-sm-12 m-0 p-0 container-fluid d-flex align-items-stretch">
-                <img class="img-fluid object-fit-cover" src="../imagenes/masa/poolish.webp"
+                <img class="img-fluid object-fit-cover" src="../imagenes/masa/poolish.jpg"
                     alt="espatula haciendo el poolish vista de arriba">
             </div>
         </div>
