--- a/pages/recetas.html
+++ b/pages/recetas.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pizza Fan! - La Receta Perfecta para tu Pizza Napolitana - Recetas</title>
+    <meta name="description" content="Explora nuestras deliciosas recetas de pizza napolitana en Pizza Fan. Aprende técnicas auténticas para estirar la masa, preparar la salsa perfecta y crear la icónica Pizza Margarita. Descubre los secretos de la cocina italiana y conviértete en un maestro pizzero en casa. ¡Sigue nuestras recetas paso a paso y disfruta de auténticos sabores italianos!">
+    <title>Recetas Auténticas de Pizza Napolitana | Pizza Fan</title>
     <link rel="shortcut icon" href="../imagenes/favicon.png" type="image/x-icon">
     <!-- BOOTSTRAP -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -121,7 +122,7 @@
 
 
             <div class="col-lg-6 col-sm-12 m-0 p-0 d-flex align-items-stretch">
-                <img class="img-fluid object-fit-cover" src="../imagenes/recetas/salsa-pizza.webp"
+                <img class="img-fluid object-fit-cover" src="../imagenes/recetas/salsa-pizza.jpg"
                     alt="Pizza vista desde arriba con salsa">
 
             </div>
