Se corrigió medias queries con tamaños de textos mejorados para pantallas grandes y se ajustó algunas imagenes

--- a/index.html
+++ b/index.html
@@ -69,15 +69,15 @@
         <div class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner mb-3">
                 <div class="carousel-item active">
-                    <img src="imagenes/foto-portada-1.jpg" class="img-fluid d-block w-100"
+                    <img src="imagenes/foto-portada-1.jpg" class="imgCarrusel img-fluid d-block w-100"
                         alt="imagen de pizza uno en el carrusel">
                 </div>
                 <div class="carousel-item">
-                    <img src="imagenes/foto-portada-2.jpg" class="img-fluid d-block w-100"
+                    <img src="imagenes/foto-portada-2.jpg" class="imgCarrusel img-fluid d-block w-100"
                         alt="imagen de pizza dos en el carrusel">
                 </div>
                 <div class="carousel-item">
-                    <img src="imagenes/foto-portada-3.jpg" class="img-fluid d-block w-100"
+                    <img src="imagenes/foto-portada-3.jpg" class="imgCarrusel img-fluid d-block w-100"
                         alt="imagen de pizza tres en el carrusel">
                 </div>
                 <a class="botonComenzar" href="pages/masa.html">¡COMENZAR!</a>
