--- a/pages/masa.html
+++ b/pages/masa.html
@@ -120,8 +120,8 @@
                 </ol>
             </div>
             <div class="col-lg-6 col-sm-12 m-0 p-0 container-fluid d-flex align-items-stretch">
-                <img class="img-fluid object-fit-cover" src="../imagenes/masa/poolish.jpg"
-                    alt="espatula haciendo el poolish vista de arriba">
+                <img class="img-fluid object-fit-cover w-100" src="../imagenes/masa/poolish.jpg"
+                    alt="poolish vista de arriba en un bowl">
             </div>
         </div>
 
