--- a/pages/calculadora.html
+++ b/pages/calculadora.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Utiliza la calculadora de masa de Pizza Fan para simplificar tus cálculos al preparar tu pizza napolitana. Ingresa la cantidad de pizzas que deseas cocinar y el peso de los bollos que necesitas, y obtén automáticamente las cantidades de harina, agua y poolish requeridas. Ahorra tiempo y asegúrate de tener los ingredientes adecuados para tu próxima creación culinaria.">
+    <meta name="description"
+        content="Utiliza la calculadora de masa de Pizza Fan para simplificar tus cálculos al preparar tu pizza napolitana. Ingresa la cantidad de pizzas que deseas cocinar y el peso de los bollos que necesitas, y obtén automáticamente las cantidades de harina, agua y poolish requeridas. Ahorra tiempo y asegúrate de tener los ingredientes adecuados para tu próxima creación culinaria.">
     <title>Calculadora de Masa de Pizza - Cantidad de Ingredientes para tus Pizzas | Pizza Fan</title>
     <link rel="shortcut icon" href="../imagenes/favicon.png" type="image/x-icon">
     <!-- BOOTSTRAP -->
@@ -54,50 +55,78 @@
     <main>
         <h1 class="container text-center">LA RECETA PERFECTA PARA TU PIZZA NAPOLITANA</h1>
     </main>
-<!-- SECCION CALCULADORA -->
+    <!-- SECCION CALCULADORA -->
     <section class="container mb-2">
-
-        <h2 class="container text-center subtituloSeccion pt-2 pb-2">CALCULADORA DE MASA</h2>
 
         <div class="row mt-2 p-0 m-0 container-fluid">
             <div class="col-lg-6 col-sm-12 pt-2 ps-2 m-0 bg-secondary-subtle">
-                <h3>SIMPLIFICAMOS LOS CALCULOS</h3>
+                <h3>SIMPLIFICAMOS LOS CÁLCULOS</h3>
                 <p>Calculá la cantidad de ingredientes que necesitas para realizar tu masa en base a la cantidad de
-                    pizzas que vas a cocinar y el gramaje de bollos que necesités. </p>
-
+                    pizzas que vas a cocinar y el gramaje de bollos que necesités.</p>
                 <p>Lo recomendable para bollos es entre 280 gr a 340 gr.</p>
 
-                <form>
-                    <label for="Cantidad de Pizzas">Cantidad de Pizzas:</label>
-                    <input id="cantidadDePizzas" type="text">
-                    <label for="Peso De Bollo">Peso de Bollo (Gr.):</label>
-                    <input id="cantidadDePizzas" type="text">
+                <form class="formularioCalculadora mt-3">
+                    <div class="d-flex justify-content-start">
+                        <label for="cantidadDePizzas">Cantidad de Pizzas:</label>
+                        <input class="casillaCalculadora ms-4" id="cantidadDePizzas" type="number">
+                    </div>
+                    <div class="d-flex justify-content-start">
+                        <label for="pesoDeBollo">Peso de Bollo (Gr.):</label>
+                        <input class="casillaCalculadora ms-4" id="pesoDeBollo" type="number">
+                    </div>
+                    <button class="botonCalculadora mt-3" type="button" onclick="calcular()">Calcular</button>
                 </form>
 
                 <div class="mt-3">
-                    <h4>RESULTADO:</h4>
-
-                    <p>CANTIDAD DE HARINA:</p>
-                    <p>CANTIDAD DE AGUA:</p>
-                    <p>CANTIDAD DE POOLISH:</p>
+                    <h3>RESULTADO:</h3>
+                    <p>CANTIDAD DE HARINA: <span class="pNegrita" id="harinaResultado"></span></p>
+                    <p>CANTIDAD DE AGUA: <span class="pNegrita" id="aguaResultado"></span></p>
+                    <p>CANTIDAD DE POOLISH: <span class="pNegrita" id="poolishResultado"></span></p>
                 </div>
-
             </div>
 
             <div class="col-lg-6 col-sm-12 m-0 p-0 d-flex align-items-stretch">
                 <img class="img-fluid object-fit-cover" src="../imagenes/calculadora/calculadora-de-masa.jpg"
                     alt="Calculadora y libreta de anotaciones">
             </div>
-
-
         </div>
+
+        <script>
+            function calcular() {
+                var pesoBollo = parseFloat(document.getElementById("pesoDeBollo").value);
+                var cantidadPizzas = parseInt(document.getElementById("cantidadDePizzas").value);
+
+                if (pesoBollo >= 200 && pesoBollo <= 400 && cantidadPizzas > 0) {
+                    var harina = pesoBollo * 0.588235;
+                    var agua = pesoBollo - harina;
+                    var totalHarina = harina * cantidadPizzas;
+                    var totalAgua = agua * cantidadPizzas;
+                    var totalPoolish = 0.30 * totalHarina;
+
+                    document.getElementById("harinaResultado").textContent = formatResultado(totalHarina);
+                    document.getElementById("aguaResultado").textContent = formatResultado(totalAgua);
+                    document.getElementById("poolishResultado").textContent = formatResultado(totalPoolish);
+                } else {
+                    alert("Ingresa un peso de bollo válido (entre 200 y 400 gramos) y una cantidad de pizzas mayor a cero.");
+                }
+            }
+
+            function formatResultado(valor) {
+                if (valor > 1000) {
+                    return (valor / 1000).toFixed(2) + " kilos";
+                } else {
+                    return Math.floor(valor) + " gramos"; 
+                }
+            }
+        </script>
+
 
 
 
 
     </section>
 
-<!-- FOOTER -->
+    <!-- FOOTER -->
     <footer class="d-flex flex-column">
 
         <div class="contenedorSeguinos container-fluid pb-3 pt-2 d-flex flex-column justify-content-center">
